tests/reference/asr-test_str_capitalize-9f8dfa9.stderr
semantic error: str.capitalize() takes no arguments
 --> tests/errors/test_str_capitalize.py:4:9
  |
4 |     s = s.capitalize(23)
  |         ^^^^^^^^^^^^^^^^ 
